--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=pgsql
+DB_CONNECTION=mysql
 DB_HOST=192.168.99.100
 DB_PORT=3307
 DB_DATABASE=PoE
